[metadata]
name = amgu_abstract
version = 0.0.1
author = Guy Arieli & Amit Nadam
author_email = guyarieli17@yahoo.com
# description = Easy To Use DRL API Using CityFlow
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True